--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -6,6 +6,27 @@
     grid-template-columns: 50% 50%;
 }
 
+@media (max-width: 768px) {
+    .contact-sect {
+        grid-template-columns: 100%;
+        position: relative;
+    }
+
+    .contact-star-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        margin: 0px !important;
+    }
+
+    .contact-text {
+        height: 100%;
+    }
+}
+
+
 .contact-text {
     display: grid;
     place-content: center;
@@ -27,4 +48,22 @@
 .contact-icon {
     display: inline-block;
     width: 50px;
+}
+
+@media (max-width: 768px) {
+    .contact-heading {
+        font-size: 3rem;
+    }
+
+    .contact-link {
+        font-size: 1.5rem;
+    }
+
+    .contact-icon {
+        width: 30px;
+    }
+}
+
+.contact-star-container {
+    margin: 2rem;
 }
