--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -13,7 +13,8 @@
     }
 
     .contact-star-container {
-        position: absolute;
+        position: absolute !important;
+
         top: 0;
         left: 0;
         width: 100%;
@@ -25,7 +26,6 @@
         height: 100%;
     }
 }
-
 
 .contact-text {
     display: grid;
@@ -66,4 +66,5 @@
 
 .contact-star-container {
     margin: 2rem;
+    position: relative;
 }
