--- a/src/sass/_project.scss
+++ b/src/sass/_project.scss
@@ -21,6 +21,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    overflow: hidden;
 }
 
 @media (max-width: 768px) {
